--- a/client/src/main/resources/ApplicationResources_de.properties
+++ b/client/src/main/resources/ApplicationResources_de.properties
@@ -1,5 +1,5 @@
 # Common
-link.back = ZurÃ¼ck
+link.back = Zurück
 button.logout = Logout
 login.status = Sie sind eingeloggt als
 
@@ -27,11 +27,11 @@ startpage.title = Startseite
 search.title = Suchanfrage
 prompt.search = Suchbegriff
 prompt.price.min = kleinster Preis
-prompt.price.max = grï¿½ï¿½ter Preis
+prompt.price.max = teuerster Preis
 search.submit = Suchen
 search.clear = Alle Produkte anzeigen
 products.title = Produkte
-product.add = Produkt hinzufï¿½gen
+product.add = Produkt hinzufügen
 categories.edit = Kategorien bearbeiten
 product.nr = Nummer
 product.name = Name
@@ -41,14 +41,14 @@ product.details = Details
 product.delete = LÃ¶schen
 
 # Product Add Page
-product.add.head = Webshop >> Produkt hinzufÃ¼gen
-product.add.title = Produkt hinzufÃ¼gen
+product.add.head = Webshop >> Produkt hinzufügen
+product.add.title = Produkt hinzufügen
 product.prompt.name = Name
 prompt.price = Preis
 prompt.category = Kategorie
 prompt.details = Beschreibung
-product.submit = HinzufÃ¼gen
-product.reset = ZurÃ¼cksetzen
+product.submit = hinzufügen
+product.reset = Zurücksetzen
 
 # Categories Page
 categories.head = Webshop >> Kategorien bearbeiten
