--- a/client/src/main/resources/ApplicationResources_de.properties
+++ b/client/src/main/resources/ApplicationResources_de.properties
@@ -4,7 +4,7 @@ button.logout = Logout
 login.status = Sie sind eingeloggt als
 
 # Login Page
-login.head = Webshop >> Login
+login.head = Kickershop >> Login
 login.title = Herzlich willkommen in unserem Webshop!
 prompt.username = Benutzername
 prompt.password = Passwort
@@ -12,7 +12,7 @@ register.link = Registrieren
 login.submit = Einloggen
 
 # Register Page
-register.head = Webshop >> Registrierung
+register.head = Kickershop >> Registrierung
 register.title = Benutzer Registrierung
 prompt.name = Vorname
 prompt.lastname = Nachname
@@ -22,7 +22,7 @@ checkbox.admin = Admin
 register.submit = Registrieren
 
 # start page
-startpage.head = Webshop >> Startseite
+startpage.head = Kickershop >> Startseite
 startpage.title = Startseite
 search.title = Suchanfrage
 prompt.search = Suchbegriff
@@ -38,10 +38,10 @@ product.name = Name
 product.price = Preis
 product.category = Kategorie
 product.details = Details
-product.delete = LÃ¶schen
+product.delete = Löschen
 
 # Product Add Page
-product.add.head = Webshop >> Produkt hinzufügen
+product.add.head = Kickershop >> Produkt hinzufügen
 product.add.title = Produkt hinzufügen
 product.prompt.name = Name
 prompt.price = Preis
@@ -51,16 +51,16 @@ product.submit = hinzufügen
 product.reset = Zurücksetzen
 
 # Categories Page
-categories.head = Webshop >> Kategorien bearbeiten
+categories.head = Kickershop >> Kategorien bearbeiten
 categories.title = Kategorien bearbeiten
 prompt.catname = Kategorie Name
-category.submit = Kategorie hinzufÃ¼gen
+category.submit = Kategorie hinzufügen
 categories.nr = Nummer
 categories.name = Name
 category.delete = LÃ¶schen
 
 # Product Details Page
-details.head = Webshop >> Produktbeschreibung
+details.head = Kickershop >> Produktbeschreibung
 details.title = Produktbeschreibung
 details.name = Produktname:
 details.price = Preis:
@@ -68,22 +68,22 @@ details.category = Kategorie:
 details.details = Beschreibung:
 
 # Validierung
-error.username.required = Benutzername wird benÃ¶tigt.
+error.username.required = Benutzername wird benötigt.
 error.username.wrong = Benutzer existiert nicht.
 error.username.alreadyInUse = Benutzername bereits in Verwendung. 
 
-error.password.required = Passwort wird benÃ¶tigt.
+error.password.required = Passwort wird benötigt.
 error.password.wrong = Passwort ist falsch.
-error.password.notEqual = Passwort stimmt nicht Ã¼berein.
+error.password.notEqual = Passwort stimmt nicht ändern.
 
-error.firstname.required = Vorname wird benÃ¶tigt.
-error.lastname.required = Nachname wird benÃ¶tigt.
+error.firstname.required = Vorname wird benötigt.
+error.lastname.required = Nachname wird benötigt.
 
-error.catname.required = Bitte geben Sie einen Namen fÃ¼r die neue Kategorie an.
+error.catname.required = Bitte geben Sie einen Namen für die neue Kategorie an.
 
-error.product.name.required = Produktname wird benÃ¶tigt.
-error.product.price.required = Produktpreis wird benÃ¶tigt.
-error.product.price.regex = Produktpreis muss ein gÃ¼ltiger Wert sein (z.B. 8.79).
+error.product.name.required = Produktname wird benötigt.
+error.product.price.required = Produktpreis wird benötigt.
+error.product.price.regex = Produktpreis muss ein gültiger Wert sein (z.B. 8.79).
 
 #requiredemail = ${getText(fieldName)} is not in correct format.
 #requiredpassword = ${getText(fieldName)} should be more than 6 character.
